test/scc/expr/semantic-errors/144.a
144.t:6:10: error: initializer element is not constant